Finalizando telas e listas.

--- a/app/src/main/res/layout/activity_moto.xml
+++ b/app/src/main/res/layout/activity_moto.xml
@@ -18,6 +18,7 @@
         android:textSize="30sp" />
 
     <ListView
+        android:id="@+id/listViewMotosId"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
