--- a/app/src/main/res/layout/activity_carro.xml
+++ b/app/src/main/res/layout/activity_carro.xml
@@ -7,15 +7,6 @@
     android:background="#9a9a9a"
     tools:context=".CarroActivity">
 
-    <ListView
-        android:id="@+id/listViewCarrosId"
-        android:layout_width="360dp"
-        android:layout_height="417dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
-
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
@@ -25,4 +16,12 @@
         android:layout_marginTop="24dp"
         android:text="Escolha uma marca:"
         android:textSize="30sp" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="345dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="72dp" />
+
 </RelativeLayout>
